added path to css

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link href="/portpolio/css/style.css" rel="stylesheet" />
+    <link href="./css/style.css" rel="stylesheet" />
 </head>
 
 <body>
@@ -47,7 +47,7 @@
                 <div class="col-md-12">
                     <div class="w-80 m-auto image ">
                         <h1 class="text-uppercase ">hi it's me sakthi</h1>
-                        <h4 class="text-uppercase ">hello everyone i am good i am always with you</h4>
+                        <h4 class="text-uppercase ">hello everyone i am good i am always with you </h4>
                         <a type="button" class="btn btn-dark text-uppercase"
                             href="https://www.instagram.com/polladhavan_sakthi_46?igsh=MWl5OXZqNnN4aHpjYw==">like me</a>
 
