--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
                 </div>
                 <div class="col-md-6">
-                    <img src="/portpolio/1720836237913.jpg" />
+                    <img src="./1720836237913.jpg" />
                 </div>
             </div>
         </div>
